src/user-java/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: user-java # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: acrchallenge01.azurecr.io/challenge/user-java
          name: user-java
          ports:
            - containerPort: 80
              name: http
