src/user-java/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
